tenant-a-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tenant-a-policy
  namespace: tenant-a
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels: {}
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: '80'
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tenant-b
            app: backend-service
      toPorts:
        - ports:
            - port: '80'
    - toEndpoints:
        - matchLabels: {}
    - toFQDNs:
        - matchPattern: '*.google.com'
