to-namespace-c-public-url.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: to-namespace-c-public-url-policy
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tenant-c
            app: backend-service
      toPorts:
      - ports:
        - port: "80"
          protocol: TCP
        rules:
          http:
          - method: "GET"
            path: "/public"
